--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -11,7 +11,12 @@ body {
 
 .list-dots {
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 14px;
+    width: 500px;
+    height: 300px;
+    background: rgb(233, 232, 232);
 }
 
 .list-dots .dot::before {
