--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,131 @@
 * {
     box-sizing: border-box;
 }
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
+    font-size: 1.6rem;
+}
+
+input,
+button,
+textarea,
+select {
+    font-family: inherit;
+    font-size: inherit;
+}
+
+/* COMMON */
+a {
+    text-decoration: none;
+}
+.container {
+    width: 1070px;
+    margin: 0 auto;
+}
+
+/* LISTMEMBERS.HTML */
+.wrapper .container {
+    padding: 40px 0;
+    background: rgb(253 253 254);
+}
+
+.title {
+    font-size: 70px;
+    font-weight: 700;
+    text-align: center;
+}
+
+.title .highlight {
+    background: linear-gradient(90deg, #1cb5e0 0%, #000851 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    background-color: #00f;
+}
+
+.list-members {
+    display: flex;
+    gap: 20px;
+    width: 1038px;
+    margin: 36px auto 0;
+}
+
+.member-item {
+    width: calc((100% / 3) - 20px);
+    padding: 16px;
+    text-align: center;
+    box-shadow: 0px 2px 8px 0px rgba(99, 99, 99, 0.2);
+    border-radius: 8px;
+}
+
+.member-item .thumb {
+    margin: 0 auto;
+    width: 136px;
+    height: 136px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.member-item:hover .thumb img {
+    scale: 1.2;
+    filter: grayscale(0);
+}
+
+.member-item .thumb img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    filter: grayscale(100%);
+    scale: 1;
+    transition: ease-in-out 1.5s;
+    transition-property: filter, scale;
+}
+
+.member-item .title {
+    font-size: 24px;
+    margin-top: 20px;
+    color: rgb(11, 11, 44);
+}
+
+.member-item .job {
+    margin-top: 12px;
+    font-size: 20px;
+    color: #1cb5e0;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.member-item .desc {
+    margin-top: 14px;
+    color: #8e8c8c;
+    line-height: 1.5;
+}
+
+.btn {
+    display: inline-block;
+    min-width: 96px;
+    padding: 12px 14px;
+    margin-top: 20px;
+    border-radius: 6px;
+    text-transform: uppercase;
+    background: #fff;
+    font-weight: 500;
+    border: 1px solid #1cb5e0;
+    color: #1cb5e0;
+    transition: ease 2s;
+    transition-property: color, border, background;
+}
+
+.btn:hover {
+    color: #fff;
+    background: #1cb5e0;
+    border: transparent;
+}
